--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
 
 /* Your CSS Code here. */
+.text{
+    padding: 50px;
+    border: 15px solid blue;
+    margin :20px;
+    width: 300px;
+    color:lightblue
+}
